[package]
name = "cord-uri-runtime-api"
description = "Runtime APIs for decoding CORD URIs."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# External dependencies
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }


# Substrate
sp-api = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
# sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"codec/std",
	"sp-api/std",
	"scale-info/std",
]
